[gd_scene load_steps=6 format=3 uid="uid://dd6vcyj08nswx"]

[ext_resource type="Script" path="res://scenes/npc.gd" id="1_sbtr7"]
[ext_resource type="Script" path="res://scenes/npc_dialogue.gd" id="5_rwpel"]

[sub_resource type="CircleShape2D" id="CircleShape2D_b8576"]
radius = 10.0499

[sub_resource type="RectangleShape2D" id="RectangleShape2D_1ie0m"]
size = Vector2(46.5, 42.25)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_1ciub"]
size = Vector2(74.75, 63.5)

[node name="Npc" type="CharacterBody2D"]
collision_layer = 30
collision_mask = 30
script = ExtResource("1_sbtr7")
metadata/description = &""

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(28, 15)
shape = SubResource("CircleShape2D_b8576")

[node name="action_area" type="Area2D" parent="."]
collision_layer = 6
collision_mask = 6
script = ExtResource("5_rwpel")

[node name="HTTPRequest" type="HTTPRequest" parent="action_area"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="action_area"]
position = Vector2(28, 17)
shape = SubResource("RectangleShape2D_1ie0m")

[node name="walk_timer" type="Timer" parent="."]
wait_time = 0.5

[node name="detection_area" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="detection_area"]
position = Vector2(27, 16)
shape = SubResource("RectangleShape2D_1ciub")

[node name="emotion" type="RichTextLabel" parent="."]
visible = false
offset_left = 17.0
offset_top = 38.0
offset_right = 40.0
offset_bottom = 70.0
theme_override_font_sizes/normal_font_size = 20
text = "ðŸ˜€"

[node name="Panel" type="Panel" parent="."]
visible = false
offset_left = -43.0
offset_top = -73.0
offset_right = 92.0

[node name="panel_text" type="RichTextLabel" parent="Panel"]
layout_mode = 0
offset_left = 3.0
offset_top = 1.0
offset_right = 133.0
offset_bottom = 69.0
theme_override_font_sizes/normal_font_size = 10
tab_size = 1

[node name="TextureRect" type="TextureRect" parent="."]
visible = false
offset_left = 102.0
offset_top = -67.0
offset_right = 186.0
offset_bottom = 7.0

[connection signal="body_exited" from="action_area" to="." method="_on_area_2d_body_exited"]
[connection signal="body_exited" from="action_area" to="action_area" method="_on_body_exited"]
[connection signal="request_completed" from="action_area/HTTPRequest" to="." method="_on_http_request_request_completed"]
[connection signal="timeout" from="walk_timer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="walk_timer" to="." method="_on_walk_timer_timeout"]
[connection signal="body_entered" from="detection_area" to="." method="_on_detection_area_body_entered"]
[connection signal="body_exited" from="detection_area" to="." method="_on_detection_area_body_exited"]
